--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
+    "http-proxy-middleware": "^2.0.6",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
